crates/gcl-core/src/launch/snapshots/gcl_core__launch__command__tests__launch_args_1_20_1.snap
---
source: crates/gcl-core/src/launch/command.rs
expression: cmd.args
---
[
  "-Xms512M",
  "-Xmx4096M",
  "-XX:+UseG1GC",
  "-Djava.library.path=<root>/cache/natives/1.20.1",
  "-Djna.tmpdir=<root>/cache/natives/1.20.1",
  "-Dorg.lwjgl.system.SharedLibraryExtractPath=<root>/cache/natives/1.20.1",
  "-Dio.netty.native.workdir=<root>/cache/natives/1.20.1",
  "-Dminecraft.launcher.brand=grid-craft-launcher",
  "-Dminecraft.launcher.version=0.1.0",
  "-cp",
  "<root>/cache/libraries/com/github/oshi/oshi-core/6.2.2/oshi-core-6.2.2.jar:<root>/cache/libraries/com/google/code/gson/gson/2.10/gson-2.10.jar:<root>/cache/libraries/com/google/guava/failureaccess/1.0.1/failureaccess-1.0.1.jar:<root>/cache/libraries/com/google/guava/guava/31.1-jre/guava-31.1-jre.jar:<root>/cache/libraries/com/ibm/icu/icu4j/71.1/icu4j-71.1.jar:<root>/cache/libraries/com/mojang/authlib/4.0.43/authlib-4.0.43.jar:<root>/cache/libraries/com/mojang/blocklist/1.0.10/blocklist-1.0.10.jar:<root>/cache/libraries/com/mojang/brigadier/1.1.8/brigadier-1.1.8.jar:<root>/cache/libraries/com/mojang/datafixerupper/6.0.8/datafixerupper-6.0.8.jar:<root>/cache/libraries/com/mojang/logging/1.1.1/logging-1.1.1.jar:<root>/cache/libraries/com/mojang/patchy/2.2.10/patchy-2.2.10.jar:<root>/cache/libraries/com/mojang/text2speech/1.17.9/text2speech-1.17.9.jar:<root>/cache/libraries/commons-codec/commons-codec/1.15/commons-codec-1.15.jar:<root>/cache/libraries/commons-io/commons-io/2.11.0/commons-io-2.11.0.jar:<root>/cache/libraries/commons-logging/commons-logging/1.2/commons-logging-1.2.jar:<root>/cache/libraries/io/netty/netty-buffer/4.1.82.Final/netty-buffer-4.1.82.Final.jar:<root>/cache/libraries/io/netty/netty-codec/4.1.82.Final/netty-codec-4.1.82.Final.jar:<root>/cache/libraries/io/netty/netty-common/4.1.82.Final/netty-common-4.1.82.Final.jar:<root>/cache/libraries/io/netty/netty-handler/4.1.82.Final/netty-handler-4.1.82.Final.jar:<root>/cache/libraries/io/netty/netty-resolver/4.1.82.Final/netty-resolver-4.1.82.Final.jar:<root>/cache/libraries/io/netty/netty-transport-classes-epoll/4.1.82.Final/netty-transport-classes-epoll-4.1.82.Final.jar:<root>/cache/libraries/io/netty/netty-transport-native-epoll/4.1.82.Final/netty-transport-native-epoll-4.1.82.Final-linux-aarch_64.jar:<root>/cache/libraries/io/netty/netty-transport-native-epoll/4.1.82.Final/netty-transport-native-epoll-4.1.82.Final-linux-x86_64.jar:<root>/cache/libraries/io/netty/netty-transport-native-unix-common/4.1.82.Final/netty-transport-native-unix-common-4.1.82.Final.jar:<root>/cache/libraries/io/netty/netty-transport/4.1.82.Final/netty-transport-4.1.82.Final.jar:<root>/cache/libraries/it/unimi/dsi/fastutil/8.5.9/fastutil-8.5.9.jar:<root>/cache/libraries/net/java/dev/jna/jna-platform/5.12.1/jna-platform-5.12.1.jar:<root>/cache/libraries/net/java/dev/jna/jna/5.12.1/jna-5.12.1.jar:<root>/cache/libraries/net/sf/jopt-simple/jopt-simple/5.0.4/jopt-simple-5.0.4.jar:<root>/cache/libraries/org/apache/commons/commons-compress/1.21/commons-compress-1.21.jar:<root>/cache/libraries/org/apache/commons/commons-lang3/3.12.0/commons-lang3-3.12.0.jar:<root>/cache/libraries/org/apache/httpcomponents/httpclient/4.5.13/httpclient-4.5.13.jar:<root>/cache/libraries/org/apache/httpcomponents/httpcore/4.4.15/httpcore-4.4.15.jar:<root>/cache/libraries/org/apache/logging/log4j/log4j-api/2.19.0/log4j-api-2.19.0.jar:<root>/cache/libraries/org/apache/logging/log4j/log4j-core/2.19.0/log4j-core-2.19.0.jar:<root>/cache/libraries/org/apache/logging/log4j/log4j-slf4j2-impl/2.19.0/log4j-slf4j2-impl-2.19.0.jar:<root>/cache/libraries/org/joml/joml/1.10.5/joml-1.10.5.jar:<root>/cache/libraries/org/lwjgl/lwjgl-glfw/3.3.1/lwjgl-glfw-3.3.1.jar:<root>/cache/libraries/org/lwjgl/lwjgl-glfw/3.3.1/lwjgl-glfw-3.3.1-natives-linux.jar:<root>/cache/libraries/org/lwjgl/lwjgl-jemalloc/3.3.1/lwjgl-jemalloc-3.3.1.jar:<root>/cache/libraries/org/lwjgl/lwjgl-jemalloc/3.3.1/lwjgl-jemalloc-3.3.1-natives-linux.jar:<root>/cache/libraries/org/lwjgl/lwjgl-openal/3.3.1/lwjgl-openal-3.3.1.jar:<root>/cache/libraries/org/lwjgl/lwjgl-openal/3.3.1/lwjgl-openal-3.3.1-natives-linux.jar:<root>/cache/libraries/org/lwjgl/lwjgl-opengl/3.3.1/lwjgl-opengl-3.3.1.jar:<root>/cache/libraries/org/lwjgl/lwjgl-opengl/3.3.1/lwjgl-opengl-3.3.1-natives-linux.jar:<root>/cache/libraries/org/lwjgl/lwjgl-stb/3.3.1/lwjgl-stb-3.3.1.jar:<root>/cache/libraries/org/lwjgl/lwjgl-stb/3.3.1/lwjgl-stb-3.3.1-natives-linux.jar:<root>/cache/libraries/org/lwjgl/lwjgl-tinyfd/3.3.1/lwjgl-tinyfd-3.3.1.jar:<root>/cache/libraries/org/lwjgl/lwjgl-tinyfd/3.3.1/lwjgl-tinyfd-3.3.1-natives-linux.jar:<root>/cache/libraries/org/lwjgl/lwjgl/3.3.1/lwjgl-3.3.1.jar:<root>/cache/libraries/org/lwjgl/lwjgl/3.3.1/lwjgl-3.3.1-natives-linux.jar:<root>/cache/libraries/org/slf4j/slf4j-api/2.0.1/slf4j-api-2.0.1.jar:<root>/cache/versions/1.20.1/1.20.1.jar",
  "net.minecraft.client.main.Main",
  "--username",
  "alice",
  "--version",
  "1.20.1",
  "--gameDir",
  "<root>/instances/test-pack/.minecraft",
  "--assetsDir",
  "<root>/cache/assets",
  "--assetIndex",
  "5",
  "--uuid",
  "b50ad385829d3141a2167e7d7539ba7f",
  "--accessToken",
  "0",
  "--clientId",
  "",
  "--xuid",
  "",
  "--userType",
  "legacy",
  "--versionType",
  "release"
]
