crates/gcl-core/src/launch/snapshots/gcl_core__launch__command__tests__launch_args_1_8_9.snap
---
source: crates/gcl-core/src/launch/command.rs
expression: cmd.args
---
[
  "-Xms512M",
  "-Xmx4096M",
  "-XX:+UseG1GC",
  "-Djava.library.path=<root>/cache/natives/1.8.9",
  "-cp",
  "<root>/cache/libraries/com/mojang/netty/1.8.8/netty-1.8.8.jar:<root>/cache/libraries/oshi-project/oshi-core/1.1/oshi-core-1.1.jar:<root>/cache/libraries/net/java/dev/jna/jna/3.4.0/jna-3.4.0.jar:<root>/cache/libraries/net/java/dev/jna/platform/3.4.0/platform-3.4.0.jar:<root>/cache/libraries/com/ibm/icu/icu4j-core-mojang/51.2/icu4j-core-mojang-51.2.jar:<root>/cache/libraries/net/sf/jopt-simple/jopt-simple/4.6/jopt-simple-4.6.jar:<root>/cache/libraries/com/paulscode/codecjorbis/20101023/codecjorbis-20101023.jar:<root>/cache/libraries/com/paulscode/codecwav/20101023/codecwav-20101023.jar:<root>/cache/libraries/com/paulscode/libraryjavasound/20101123/libraryjavasound-20101123.jar:<root>/cache/libraries/com/paulscode/librarylwjglopenal/20100824/librarylwjglopenal-20100824.jar:<root>/cache/libraries/com/paulscode/soundsystem/20120107/soundsystem-20120107.jar:<root>/cache/libraries/io/netty/netty-all/4.0.23.Final/netty-all-4.0.23.Final.jar:<root>/cache/libraries/com/google/guava/guava/17.0/guava-17.0.jar:<root>/cache/libraries/org/apache/commons/commons-lang3/3.3.2/commons-lang3-3.3.2.jar:<root>/cache/libraries/commons-io/commons-io/2.4/commons-io-2.4.jar:<root>/cache/libraries/commons-codec/commons-codec/1.9/commons-codec-1.9.jar:<root>/cache/libraries/net/java/jinput/jinput/2.0.5/jinput-2.0.5.jar:<root>/cache/libraries/net/java/jutils/jutils/1.0.0/jutils-1.0.0.jar:<root>/cache/libraries/com/google/code/gson/gson/2.2.4/gson-2.2.4.jar:<root>/cache/libraries/com/mojang/authlib/1.5.21/authlib-1.5.21.jar:<root>/cache/libraries/com/mojang/realms/1.7.59/realms-1.7.59.jar:<root>/cache/libraries/org/apache/commons/commons-compress/1.8.1/commons-compress-1.8.1.jar:<root>/cache/libraries/org/apache/httpcomponents/httpclient/4.3.3/httpclient-4.3.3.jar:<root>/cache/libraries/commons-logging/commons-logging/1.1.3/commons-logging-1.1.3.jar:<root>/cache/libraries/org/apache/httpcomponents/httpcore/4.3.2/httpcore-4.3.2.jar:<root>/cache/libraries/org/apache/logging/log4j/log4j-api/2.0-beta9/log4j-api-2.0-beta9.jar:<root>/cache/libraries/org/apache/logging/log4j/log4j-core/2.0-beta9/log4j-core-2.0-beta9.jar:<root>/cache/libraries/org/lwjgl/lwjgl/lwjgl/2.9.4-nightly-20150209/lwjgl-2.9.4-nightly-20150209.jar:<root>/cache/libraries/org/lwjgl/lwjgl/lwjgl_util/2.9.4-nightly-20150209/lwjgl_util-2.9.4-nightly-20150209.jar:<root>/cache/libraries/org/lwjgl/lwjgl/lwjgl-platform/2.9.4-nightly-20150209/lwjgl-platform-2.9.4-nightly-20150209.jar:<root>/cache/libraries/tv/twitch/twitch/6.5/twitch-6.5.jar:<root>/cache/versions/1.8.9/1.8.9.jar",
  "net.minecraft.client.main.Main",
  "--username",
  "alice",
  "--version",
  "1.8.9",
  "--gameDir",
  "<root>/instances/test-pack/.minecraft",
  "--assetsDir",
  "<root>/cache/assets",
  "--assetIndex",
  "1.8",
  "--uuid",
  "b50ad385829d3141a2167e7d7539ba7f",
  "--accessToken",
  "0",
  "--userProperties",
  "{}",
  "--userType",
  "legacy"
]
